--- a/lock-redis/pom.xml
+++ b/lock-redis/pom.xml
@@ -13,14 +13,26 @@
     <artifactId>lock-redis</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-web</artifactId>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
-            <version>3.1.0</version>
+            <version>3.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.13.6</version>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/io.reactivex.rxjava2/rxjava -->
+<!--        <dependency>-->
+<!--            <groupId>io.reactivex.rxjava2</groupId>-->
+<!--            <artifactId>rxjava</artifactId>-->
+<!--            <version>2.2.19</version>-->
+<!--        </dependency>-->
+
     </dependencies>
 </project>
